first commit to main

--- a/nbs/Downloading datasets.ipynb
+++ b/nbs/Downloading datasets.ipynb
@@ -11113,9 +11113,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ACCESS_KEY = \"7ZEY2CC5KFOCSH0344U2\"\n",
-    "SECRET_KEY = \"bYFK9EeENKdarCFR8wb9iaqdiHPWjuyKW8Ga3xGj\"\n",
-    "\n",
+    "ACCESS_KEY = \"YOUR_AWS_ACCESS_KEY_ID\"\n",
+    "SECRET_KEY = \"YOUR_AWS_SECRET_ACCESS_KEY\"\n",
+    "``\n",
     "# Object Storage Endpoint URL\n",
     "ENDPOINT = \"https://inline-shixi-colab.eu-central-1.linodeobjects.com\"\n",
     "\n",
