--- a/test_api.ipynb
+++ b/test_api.ipynb
@@ -11,56 +11,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "ab2a3e81",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'uuid': '789bc2ca-25fb-11ed-9c8a-b07d6415f71a',\n",
-       " 'query': 'free phones call me 908943298347 now!!!',\n",
-       " 'label': 'spam',\n",
-       " 'confidence': 0.7227466106414795,\n",
-       " 'model_version': 'v1'}"
+       "{'Hello': 'World!'}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "qu = 'free phones call me 908943298347 now!!!'\n",
-    "endpoint = f'https://5a4b-5-197-252-3.eu.ngrok.io/?q={qu}'\n",
+    "endpoint = f'https://e59c-5-197-252-3.eu.ngrok.io/?q={qu}'\n",
     "r = requests.get(endpoint)\n",
     "r.json()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "id": "2566c9f1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'uuid': '51bc1a03-25fd-11ed-b545-b07d6415f71a',\n",
+       "{'uuid': 'e9a81811-2707-11ed-b0e7-b07d6415f71a',\n",
        " 'query': 'free phones call me 908943298347 now!!!',\n",
        " 'label': 'spam',\n",
        " 'confidence': 0.7227466106414795,\n",
        " 'model_version': 'v1'}"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "endpoint = f'https://5a4b-5-197-252-3.eu.ngrok.io/'\n",
-    "r = requests.post(endpoint, json={\"q\": \"free phones call me 908943298347 now!!!\"})\n",
+    "qu = 'free phones call me 908943298347 now!!!'\n",
+    "endpoint = f'https://e59c-5-197-252-3.eu.ngrok.io/'\n",
+    "r = requests.post(endpoint, json={\"q\": qu})\n",
     "r.json()"
    ]
   },
